test/corpus/many_things.txt
==================
Many things
==================

a: i32,
b: i32,

fn main() -> i32 {
  let v = const struct {
    x: @TypeOf(true),
  } {
    x: true,
  };
}

---
(source_file
  (decl
    (field_decl
      (name)
      (expr
        (name))))
  (decl
    (field_decl
      (name)
      (expr
        (name))))
  (decl
    (fn_decl
      (name)
      (expr
        (name))
      (block
        (stmt
          (let_
            (name)
            (expr
              (expr
                (expr
                  (decl
                    (field_decl
                      (name)
                      (expr
                        (builtin_call
                          (builtin_function
                            (name))
                          (arg_list
                            (expr
                              (boolean_literal)))))))))
              (constructor_block
                (constructor_field
                  (name)
                  (expr
                    (boolean_literal)))))))))))
